# baremetal

./: .gitmodules  Cargo.toml  README.md  makefile  rust-toolchain.toml
.cargo/: config.toml
.metals/: metals.lock.db
boot/: Cargo.toml
boot/src/: lib.rs
config/src/: lib.rs
console/: Cargo.toml
console/src/: lib.rs
driver-test/atsintc/: Cargo.toml
driver-test/atsintc/assets/: statistic.py
driver-test/atsintc/src/: fetch.rs  main.rs  priority.rs  push.rs  switch.rs
driver-test/axinet/: Cargo.toml  README.md
driver-test/axinet/assets/: statictic.py  translate_data2point.py
driver-test/axinet/assets/cycles/: receive.gnuplot  transmit.gnuplot
driver-test/axinet/assets/intr_latency/: intr_latency_freq.gnuplot
driver-test/axinet/assets/multi_connection/: translate_data2point.py
driver-test/axinet/assets/multi_connection/analysis/: mc8_16_4.gnuplot  mc8_1_4.gnuplot  mc8_32_4.gnuplot  mc8_4_4.gnuplot
driver-test/axinet/assets/multi_loop/: multi_loop_workload1.gnuplot  multi_loop_workload2.gnuplot  multi_loop_workload3.gnuplot
driver-test/axinet/assets/multi_prio/: translate_data2point.py
driver-test/axinet/assets/net_stack/: ns_ping_latency.gnuplot  ping_latency_freq.gnuplot
driver-test/axinet/assets/single_loop/: single_loop.gnuplot  single_loop_workload.gnuplot  single_loop_workload1.gnuplot  single_loop_workload2.gnuplot  single_loop_workload3.gnuplot
driver-test/axinet/assets/single_loop/atsintc/: atsintc_delay_freq.gnuplot  translate_data2point.py
driver-test/axinet/assets/single_loop/intr/: intr_delay_freq.gnuplot
driver-test/axinet/assets/single_loop/poll/: poll_delay_freq.gnuplot
driver-test/axinet/assets/smoltcp_test/: netstack_workload.gnuplot  translate_data2point.py
driver-test/axinet/assets/throughput/: atsintc.gnuplot  intr.gnuplot  throughput.gnuplot  throughput1.gnuplot
driver-test/axinet/src/: atsintc.rs  driver.rs  intr.rs  main.rs  matrix.rs  poll.rs
driver-test/axinet/src/bulk_receive_test/: mod.rs  poll.rs  send_eth.py
driver-test/axinet/src/bulk_test/: mod.rs  poll.rs
driver-test/axinet/src/eth_transieve_loop/: atsintc.rs  client.py  intr.rs  mod.rs  poll.rs
driver-test/axinet/src/multi_connection/: mod.rs  netstack.rs  tcp_client_prio.py  translate_data2point.py
driver-test/axinet/src/multi_loop_test/: atsintc.rs  client.py  intr.rs  matrix.rs  mod.rs  poll.rs
driver-test/axinet/src/multi_prio/: client.py  mod.rs  tcp_client.py  tcp_client_prio.py
driver-test/axinet/src/multi_prio/ns/: mod.rs  socket.rs
driver-test/axinet/src/net_stack_test/: atsintc.rs  atsintc.rs.bak  client.py  intr.rs  mod.rs  poll.rs
driver-test/axinet/src/netstack/: async_ns.rs  async_ns.rs.bak  intr.rs  mod.rs  poll.rs
driver-test/axinet/src/ns_ping/: atsintc.rs  client.py  intr.rs  mod.rs  poll.rs
driver-test/axinet/src/ns_ping/assets/: ns_ping.gnuplot  ns_ping_freq.gnuplot  translate_data2point.py
driver-test/axinet/src/prio_connect/: mod.rs  netstack.rs  tcp_client_prio.py
driver-test/axinet/src/prio_connect/assets/: core.gnuplot  core4_prio1t.gnuplot  core_freq.gnuplot  prio_impact.gnuplot  translate_data2point.py
driver-test/axinet/src/prio_connect/assets/core-4/p1-t16-m4/: prio_freq.gnuplot
driver-test/axinet/src/prio_connect/assets/core-4/p1-t256-m4/: prio_freq.gnuplot
driver-test/axinet/src/prio_connect/assets/core-4/p1-t32-m4/: prio_freq.gnuplot
driver-test/axinet/src/prio_connect/assets/core-4/p1-t4-m4/: prio_freq.gnuplot
driver-test/axinet/src/prio_connect/assets/core-4/p1-t64-m4/: prio_freq.gnuplot
driver-test/axinet/src/prio_connect/assets/core-4/p1-t8-m4/: prio_freq.gnuplot
driver-test/axinet/src/prio_connect/assets/core-4/p4-t1-m4/: prio_freq.gnuplot
driver-test/axinet/src/prio_connect/assets/core-4/p4-t16-m4/: prio_freq.gnuplot
driver-test/axinet/src/prio_connect/assets/core-4/p4-t2-m4/: prio_freq.gnuplot
driver-test/axinet/src/prio_connect/assets/core-4/p4-t32-m4/: prio.gnuplot
driver-test/axinet/src/prio_connect/assets/core-4/p4-t4-m4/: prio_freq.gnuplot
driver-test/axinet/src/prio_connect/assets/core-4/p4-t64-m4/: prio_freq.gnuplot
driver-test/axinet/src/prio_connect/assets/core-4/p4-t8-m4/: prio_freq.gnuplot
driver-test/axinet/src/prio_connect/assets/core-4/p4-t80-m4/: prio_freq.gnuplot
driver-test/axinet/src/prio_connect/assets/core-4/p8-t32-m1/: prio_freq.gnuplot
driver-test/axinet/src/prio_connect/assets/p4-c32-m4/: prio.gnuplot  prio_freq.gnuplot  statics.py
driver-test/axinet/src/prio_connect/assets/priority_impact/: prio_impact.gnuplot
driver-test/axinet/src/simple_receive_test/: atsintc.rs  intr.rs  mod.rs  poll.rs  send_eth.py
driver-test/axinet/src/simple_transmit_test/: atsintc.rs  intr.rs  mod.rs  poll.rs
driver-test/axinet/src/single_loop/: atsintc.rs  client.py  intr.rs  mod.rs  poll.rs  single_workload.gnuplot
driver-test/axinet/src/single_loop_test/: atsintc.rs  client.py  intr.rs  mod.rs  poll.rs
driver-test/axinet/src/single_tcp/: atsintc.rs  intr.rs  mod.rs  poll.rs  tcp_client.py
driver-test/axinet/src/single_tcp/assets/: m0_freq.gnuplot  m16_freq.gnuplot  m1_freq.gnuplot  m2_freq.gnuplot  m4_freq.gnuplot  m8_freq.gnuplot  single_tcp.gnuplot  single_tcp_freq.gnuplot  translate_data2point.py
driver-test/axinet/src/smoltcp_test/: atsintc.rs  intr.rs  mod.rs  poll.rs  tcp_client.py
driver-test/axinet/src/transeiver/: transmit_cycles.gnuplot
driver-test/axinet/src/transmit_line_speed/: README.md  atsintc.rs  intr.rs  mod.rs  poll.rs  receiver.py  transmit_line_speed.gnuplot
langitem/: Cargo.toml
langitem/src/: lib.rs
mem/: Cargo.toml
mem/src/: lib.rs
time/: Cargo.toml
time/src/: delay.rs  driver.rs  duration.rs  instant.rs  lib.rs
trap/: Cargo.toml
trap/src/: lib.rs  plic.rs  trap.asm
