[package]
name = "atsintc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot = { path = "../../boot"}
mem = { path = "../../mem" } 
console = { path = "../../console" }
langitem = { path = "../../langitem"}
time = { path = "../../time" }
ats-intc = { path = "../../ats-intc" }

log = "0.4"
spin = "0.9"
riscv = "0.11.0"

[features]
smp = []

push = []
fetch = []
switch = []
priority = []

default = []
