[package]
name = "axinet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot = { path = "../../boot"}
mem = { path = "../../mem" } 
console = { path = "../../console" }
langitem = { path = "../../langitem"}
time = { path = "../../time" }
axi-dma = { path = "../../axi-dma" }
axi-ethernet = { path = "../../axi-ethernet" }
trap = { path = "../../trap", optional = true }
ats-intc = { path = "../../ats-intc", optional = true }

log = "0.4"
spin = "0.9"
riscv = "0.11.0"
pnet = { version = "0.34.0", default-features = false }
embassy-net-driver = {version = "0.2.0", optional = true }
rand_xorshift = { version = "0.3.0",  optional = true }
rand_core = {version = "0.6.3", optional = true }

[features]

smp = []

simple_transmit_poll = []
simple_transmit_intr = ["trap"]
simple_transmit_atsintc = ["ats-intc", "axi-dma/async"]

simple_receive_poll = []
simple_receive_intr = ["trap"]
simple_receive_atsintc = ["ats-intc", "axi-dma/async"]

single_loop_poll = []
single_loop_intr = ["trap"]
single_loop_atsintc = ["ats-intc", "axi-dma/async"]

calculate = ["rand_xorshift", "rand_core"]

multi_loop_poll = ["rand_xorshift", "rand_core"]
multi_loop_intr = ["trap", "rand_xorshift", "rand_core"]
multi_loop_atsintc = ["ats-intc", "axi-dma/async", "rand_xorshift", "rand_core"]

default = ["single_loop_atsintc", "calculate"]