[package]
name = "axinet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot = { path = "../../boot"}
mem = { path = "../../mem" } 
console = { path = "../../console" }
langitem = { path = "../../langitem"}
time = { path = "../../time" }
axi-dma = { path = "../../axi-dma", features = ["driver_test"]}
axi-ethernet = { path = "../../axi-ethernet" }
trap = { path = "../../trap", optional = true }
ats-intc = { path = "../../ats-intc", optional = true }

log = "0.4"
spin = "0.9"
riscv = "0.11.0"
pnet = { version = "0.34.0", default-features = false }
rand_xorshift = { version = "0.3.0",  optional = true }
rand_core = {version = "0.6.3", optional = true }
embassy-net = { path = "/home/zfl/ats-intc/embassy/embassy-net", features = ["udp", "tcp", "proto-ipv4", "medium-ethernet", "log"], optional = true }

heapless = { version = "0.8", default-features = false, optional = true }
static_cell = "2.0.0"
lose-net-stack = { git = "https://github.com/yfblock/lose-net-stack", rev = "db42380", optional = true }
managed = { version = "0.8", features = ["map"], default-features = false}
kernel_guard = "0.1.0"

[dependencies.smoltcp]
git = "https://github.com/smoltcp-rs/smoltcp.git"
rev = "b57e2f9e70e82a13f31d5ea17e55232c11cc2b2d"
default-features = false
features = [
  "alloc", "log",   # no std
  "medium-ethernet",
  "proto-ipv4",
  "socket-raw", "socket-icmp", "socket-udp", "socket-tcp",
]
optional = true

[features]

smp = []

simple_transmit_poll = []
simple_transmit_intr = ["trap"]
simple_transmit_atsintc = ["ats-intc", "axi-dma/async"]

simple_receive_poll = []
simple_receive_intr = ["trap"]
simple_receive_atsintc = ["ats-intc", "axi-dma/async"]

single_loop_poll = []
single_loop_intr = ["trap"]
single_loop_atsintc = ["ats-intc", "axi-dma/async"]

calculate = ["rand_xorshift", "rand_core"]

multi_loop_poll = []
multi_loop_intr = ["trap"]
multi_loop_atsintc = ["ats-intc", "axi-dma/async"]

ns_poll = ["smoltcp"]
ns_intr = ["trap", "smoltcp"]
ns_atsintc = ["ats-intc", "axi-dma/async", "embassy-net", "heapless"]

multi_prio = ["ats-intc", "axi-dma/async", "lose-net-stack", "calculate"]

smol_poll = ["smoltcp", "calculate"]
smol_intr = ["trap", "smoltcp"]
smol_atsintc = ["ats-intc", "axi-dma/async", "embassy-net", "heapless",  "calculate"]

multi_connection = ["ats-intc", "axi-dma/async", "embassy-net", "heapless", "calculate"]

transmit_line_speed_poll = []
transmit_line_speed_intr = ["trap"]
transmit_line_speed_atsintc = ["ats-intc", "axi-dma/async"]

receive_line_speed_poll = []
receive_line_speed_intr = ["trap"]
receive_line_speed_atsintc = ["ats-intc", "axi-dma/async"]

default = []